2012-05-31  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp: Porting code to desktop.  Because of
	outdated github the code may be slightly unstable.  Needs to be
	retested on sbcl and laptop.
	(start-gnuplot): While porting to new desktop (where it now
	works), I might have mungled the interface.  This functions needs
	to be retested on SBCL and on my laptop.
	(init-gnuplot): Fixed bug - I was using symbolicate, which I don't
	think was necessary.  Now I downcase the terminal name, since that
	seems to be the convention on gnuplot.

2012-02-26  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (start-gnuplot): Now returns nothing
	(values)

2012-02-25  Mirko Vukovic  <mirko.vukovic@us.tel.com>

	* gnuplot-interface.lisp (*executable*): Added wgnuplot path
	(*terminal*): Changed feature tests to be based on platforms, not
	my individual machines
	(eval-when (...)): cleaned-up DISPLAY initialization 
	(command): cleaned-up accumulated crud
	(gnuplot-command): args is now a &rest, and we use apply instead
	of funcall

2011-10-05  Mirko Vukovic  <Mirko Vukovic <mirko.vukovic@us.tel.com>>

	* package.lisp (#:gnuplot-interface): Updated documentation

	* gnuplot-interface.lisp: I replaced the symbol macros for the
	utility functions by function calls
